--- a/src/main/resources/templates/ex/ex3.html
+++ b/src/main/resources/templates/ex/ex3.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en"
-xmlns="http://www.thymeleaf.com"
-xmlns="http://www.ultraq.net.nz">
+xmlns:th="http://www.thymeleaf.org"
+xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+layout:decorate="~{layout/layout1.html}">
 <head>
     <meta charset="UTF-8">
     <title>EX3</title>
 </head>
 <body>
+    <div layout:fragment="content">
+        <h1>ex3.html</h1>
+    </div>
 
+    <script layout:fragment="script" th:inline="javascript">
+        const arr = [[${arr}]];
+        
+        console.log(arr);
+    </script>
 </body>
 </html>
