--- a/src/main/resources/templates/layout/layout1.html
+++ b/src/main/resources/templates/layout/layout1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"
-      xmlns="http://www.ultraq.net.nz/thymeleaf/layout"
-      xmlns="http://www.thymeleaf.com">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Layout Page</title>
