--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -52,6 +52,9 @@
                                 <td>
                                     <a class="link-dark" th:href="|@{/board/read}?bno=${dto.bno}&${pageRequestDTO.getLink()}|">[[${dto.title}]]</a>
                                     <span class="badge progress-bar-success" style="background-color: #0a53be">[[${dto.replyCount}]]</span>
+                                    <div th:if="${dto.boardImages != null && dto.boardImages.size() > 0}">
+                                        <img style="width:100px" th:each="boardImage: ${dto.boardImages}" th:src="|/view/s_${boardImage.uuid}_${boardImage.fileName}|">
+                                    </div>
                                 </td>
                                 <td>[[${dto.writer}]]</td>
                                 <td>[[${#temporals.format(dto.regDate, 'yyyy-MM-dd')}]]</td>
