--- a/src/main/resources/templates/board/modify.html
+++ b/src/main/resources/templates/board/modify.html
@@ -30,8 +30,14 @@
                             </div>
                             <div class="input-group mb-3">
                                 <span class="input-group-text">Writer</span>
-                                <input type="text" class="form-control" th:value="${dto.writer}" name="writer" >
+                                <input type="text" class="form-control" th:value="${dto.writer}" name="writer" readonly />
                                 <div id="writerValidation" class="invalid-feedback"></div>
+                            </div>
+                            <div class="input-group mb-3">
+                                <span class="input-group-text">Images</span>
+                                <div class="float-end uploadHidden">
+                                    <button type="button" class="btn btn-primary uploadFileBtn">ADD Files</button>
+                                </div>
                             </div>
                             <div class="my-4">
                                 <div class="float-end">
@@ -45,6 +51,47 @@
                 </div>
             </div>
         </div>
+    
+        <div class="row mt-3">
+            <div class="col">
+                <div class="container-fluid d-flex uploadResult" style="flex-wrap: wrap;">
+                    <th:block th:each="fileName: ${dto.fileNames}">
+                        <div class="card col-4" th:with="arr = ${fileName.split('_')}">
+                            <div class="card-header d-flex justify-content-center">
+                                [[${arr[1]}]]
+                                <button class="btn-sm btn-danger" th:onclick="removeFile([[${arr[0]}]], [[${arr[1]}]], this)">X</button>
+                            </div>
+                            <div class="card-body">
+                                <img th:src="|/view/s_${fileName}|" th:data-src="${fileName}">
+                            </div>
+                        </div>
+                    </th:block>
+                </div>
+            </div>
+        </div>
+    
+        <div class="modal uploadModal" tabindex="-1">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Upload File</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="input-group mb-3">
+                            <input type="file" name="files" class="form-control" multiple>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary uploadBtn">Upload</button>
+                        <button type="button" class="btn btn-secondary closeUploadBtn" data-bs-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+        <script src="/js/upload.js"></script>
     </div>
     <script layout:fragment="script" th:inline="javascript">
         const errors = [[${errors}]];
@@ -67,18 +114,132 @@
             e.stopPropagation();
             
             formObj.action = `/board/modify?${link}`;
+            
+            appendFileData();
+            
+            callRemoveFiles();
+            
             formObj.method = 'post';
             formObj.submit();
         });
+        
+        const appendFileData = () => {
+            const target = document.querySelector(".uploadHidden");
+    
+            const uploadFiles = document.querySelectorAll("img");
+    
+            let str = "";
+    
+            for(let i=0; i<uploadFiles.length; i++) {
+                const uploadFile = uploadFiles[i];
+                const imgLink = uploadFile.getAttribute("data-src");
+        
+                str += `<input type='hidden' name='fileNames' value='${imgLink}'/>`;
+            }
+    
+            target.innerHTML = str;
+        }
+        
+        const callRemoveFiles = () => {
+            if(removedFileList == null) return;
+    
+            removedFileList.forEach(({uuid, fileName}) => {
+                removeFileToServer(uuid, fileName);
+            });
+        }
+        
+        const appendNotShownData = () => {
+            
+            if(removedFileList == null || removedFileList.length == 0) return;
+    
+            const target = document.querySelector(".uploadHidden");
+    
+            let str = "";
+    
+            removedFileList.forEach(({uuid, fileName}) => {
+                str += `<input type='hidden' name='fileNames' value='${uuid}_${fileName}'/>`;
+            })
+    
+            target.innerHTML += str;
+        }
         
         document.querySelector(".removeBtn").addEventListener('click', e => {
             e.preventDefault();
             e.stopPropagation();
             
+            appendFileData();
+            appendNotShownData();
+            
             formObj.action = `/board/remove`;
             formObj.method = "post";
             formObj.submit();
+        });
+        
+        const removedFileList = [];
+        
+        const removeFile = (uuid, fileName, obj) => {
+            if(!confirm("정말로 삭제하시겠습니까?")) return;
+            
+            removedFileList.push({uuid, fileName});
+            
+            const targetDiv = obj.closest(".card");
+            targetDiv.remove();
+        }
+        
+        // 파일 모달
+        const uploadModal = new bootstrap.Modal(document.querySelector(".uploadModal"));
+        
+        document.querySelector(".uploadFileBtn").addEventListener("click", e => {
+            e.stopPropagation();
+            e.preventDefault();
+            
+            uploadModal.show();
+        }, false);
+        
+        document.querySelector(".uploadBtn").addEventListener("click", e => {
+    
+            const formObj = new FormData();
+    
+            const fileInput = document.querySelector("input[name=files]");
+    
+            console.log(fileInput.files)
+    
+            const files = fileInput.files;
+    
+            for(let i=0; i<files.length; i++) {
+        
+                // replace underbar with dash in file name
+                let blob = files[i].slice(0,files[0].size, files[0].type);
+                let newFile = new File([blob], files[i].name.replaceAll("_","-"), {type: blob.type});
+                formObj.append("files", newFile);
+            }
+    
+            uploadToServer(formObj).then(result => {
+                for (const uploadResult of result) {
+                    showUploadFile(uploadResult);
+                }
+                fileInput.value = "";
+                uploadModal.hide();
+            }).catch(e => {
+                console.error(e);
+                uploadModal.hide();
+            })
         })
+
+        const uploadResult = document.querySelector(".uploadResult");
+        const showUploadFile = ({uuid, fileName, link}) => {
+            const str = `<div class="card col-4">
+                <div class="card-header d-flex justify-content-center">
+                    ${fileName}
+                    <button class="btn-sm btn-danger" onClick="javascript:removeFile('${uuid}', '${fileName}', this)">X</button>
+                </div>
+                <div class="card-body">
+                    <img src="/view/${link}" data-src="${uuid+"_"+fileName}"/>
+                </div>
+            </div>`;
+    
+            uploadResult.innerHTML += str;
+        }
     </script>
 </body>
 </html>
