--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -36,6 +36,7 @@
                     </div>
                 </div>
             </form>
+            <div><a href="/oauth2/authorization/kakao">KAKAO</a></div>
         </div>
     </div>
 </div>
